# strategem-hero

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-test-multiplatform.yml
src/: app.rs  error.rs  event.rs  game.rs  main.rs  storage.rs  strategem.rs  tui.rs  utility.rs
src/strategem/: builder.rs  mod.rs
src/strategem/collections/: defensive.rs  mission.rs  mod.rs  offensive.rs  supply.rs
src/tui/: menu.rs  mod.rs  screen.rs
