[package]
name = "strategem-hero"
description = "Simple CLI Game following Strageme Hero mini-game from Helldivers 2"
version = "0.4.0"
edition = "2021"
authors = ["Milinkov Nikita <milinkov.nik@gmail.com>"]
homepage = "https://github.com/Milinkov-N/strategem-hero"
repository = "https://github.com/Milinkov-N/strategem-hero"

[profile.release]
strip = true
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
crossterm = { version = "0.27" }
chrono = { version = "0.4" }
rand = { version = "0.8" }
