[package]
name = "strategem-hero"
description = "Simple CLI Game following Strategem Hero mini-game from Helldivers 2"
version = "0.7.0"
edition = "2021"
license = "MIT"
authors = ["Milinkov Nikita <milinkov.nik@gmail.com>"]
homepage = "https://github.com/Milinkov-N/strategem-hero"
repository = "https://github.com/Milinkov-N/strategem-hero"
keywords = ["cli", "game"]
categories = ["games", "command-line-utilities"]

[profile.release]
strip = true
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
crossterm = { version = "0.27" }
chrono = { version = "0.4" }
rand = { version = "0.8" }
rusqlite = { version = "0.31.0", features = ["bundled"] }
sql-builder = "3.1.1"
