[package]
name = "strategem-hero"
description = "Simple CLI Game following Strategem Hero mini-game from Helldivers 2"
version = "0.8.1"
edition = "2021"
license = "MIT"
authors = ["Milinkov Nikita <milinkov.nik@gmail.com>"]
homepage = "https://github.com/Milinkov-N/strategem-hero"
repository = "https://github.com/Milinkov-N/strategem-hero"
keywords = ["cli", "game"]
categories = ["games", "command-line-utilities"]

[profile.release]
strip = true
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
crossterm = { version = "0.27" }
rand = { version = "0.8" }
bincode = "1.3.3"
serde = { version = "1.0.210", features = ["derive"] }
